# mcp-scanner

./: .gitignore  CLAUDE.md  Dockerfile  README.md  autonomous_summary.md  pyproject.toml
.github/workflows/: build.yml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
specs/001-mcp-ai-scanner/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/001-mcp-ai-scanner/checklists/: requirements.md
specs/001-mcp-ai-scanner/contracts/: scanner-protocol.md
src/mcp_scanner/: __init__.py  auth.py  cli.py  entrypoint.py  mcp_client.py  models.py  progress.py  sarif.py  scanner.py  signatures.py  source_analyzer.py  tool_analyzer.py
src/signatures/: baseline.json
tests/: conftest.py  test_mcp_client.py  test_models.py  test_sarif.py  test_signatures.py  test_source_analyzer.py  test_tool_analyzer.py
tests/fixtures/: clean_tools.json  malicious_tools.json
tests/fixtures/clean_source/: server.py
tests/fixtures/malicious_source/: evil_server.py
