[project]
name = "mcp-scanner"
version = "0.1.0"
description = "AI-powered MCP security scanner using Claude Agent SDK"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "click>=8.1",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.scripts]
mcp-scanner = "mcp_scanner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_scanner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/", "src/signatures/"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
